# funicular-down

./: README.md  pyproject.toml
project/project/: settings.py  urls.py
project/project/templates/: base.html
src/funicular_down/: admin.py  apps.py  models.py  urls.py  views.py
src/funicular_down/migrations/: 0001_initial.py  0002_alter_entry_options_alter_entry_id_up.py  0003_server_entry_server.py  0004_server_active.py  0005_alter_entry_id_up_entry_unique_server_to_id.py
src/funicular_down/templates/funicular_down/: base.html  base_app.html  control.html
