[tool.black]
target-version = ['py313']

[tool.isort]
profile = "black"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "funicular-down"
version = "0.1.0"
authors = [
  { name="andywar65", email="andy.war1965@gmail.com" },
]
description = "A two part Django app for syncing files from cloud to local computer"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "django>=4.2.18",
    "environs>=14.1.0",
    "pillow>=11.1.0",
    "requests>=2.32.3",
]

[project.urls]
Repository = "https://github.com/andywar65/funicular-down"

[dependency-groups]
dev = [
]
